day3/app_deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: app-deployment
  namespace: myns3

spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: app-pod
      app.kubernetes.io/version: "v1"
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      name: app-pod
      labels:
        app.kubernetes.io/name: app-pod
        app.kubernetes.io/version: "v1"
    spec:
      containers:
      - name: app-container
        image: stackupiss/bgg-app:v1
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 16M
          limits:
            memory: 32M
        ports:
        - name: app-port1
          containerPort: 3000
