day3/app_deployment_v2.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: app-deployment-two
  namespace: myns3

spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: app-pod
      app.kubernetes.io/version: "v2"
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      name: app-pod
      labels:
        app.kubernetes.io/name: app-pod
        app.kubernetes.io/version: "v2"
    spec:
      containers:
      - name: app-container
        image: stackupiss/bgg-app:v2
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 16M
          limits:
            memory: 32M
        ports:
        - name: app-port2
          containerPort: 3000
