day3/db_deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: database-deployment
  namespace: myns3

spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: database-pod
      app.kubernetes.io/version: "v1"
  template:
    metadata:
      name: database-pod
      labels:
        app.kubernetes.io/name: database-pod
        app.kubernetes.io/version: "v1"
    spec:
      volumes:
        - name: dbvol
          persistentVolumeClaim:
            claimName: persistant-database
      containers:
      - name: database-container
        image: stackupiss/bgg-db:v1
        imagePullPolicy: Always
        ports:
        - name: database-port
          containerPort: 3306
        volumeMounts:
          - mountPath: /var/lib/mysql
          # THe name has to be the same as specified in spec.volumes.name
            name: dbvol
