day3/app_service.yaml
apiVersion: v1
kind: Service

metadata:
  name: app-db-svc1
  namespace: myns3

spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: app-pod
    app.kubernetes.io/version: "v1"
  ports:
  #targetPort is the port in the container  
  - name: app-port-svc1
  #this has to be port 80 for a loadbalancer service
    port: 3000
    targetPort: app-port1
---
apiVersion: v1
kind: Service

metadata:
  name: app-db-svc2
  namespace: myns3

spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: app-pod
    app.kubernetes.io/version: "v2"
  ports:
  #targetPort is the port in the container  
  - name: app-port-svc2
  #this has to be port 80 for a loadbalancer service
    port: 3001
    targetPort: app-port2
